--- a/TelaAluno/src/main/java/com/mycompany/mavenproject1/TelaModos.form
+++ b/TelaAluno/src/main/java/com/mycompany/mavenproject1/TelaModos.form
@@ -58,10 +58,10 @@
               </Group>
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                          <Component id="BotãoMat" min="-2" pref="375" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="461" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="461" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="BotãoMat" min="-2" pref="375" max="-2" attributes="0"/>
                               <Component id="BotãoGeral" min="-2" pref="375" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -81,7 +81,7 @@
                       <Component id="jLabel3" min="-2" pref="134" max="-2" attributes="0"/>
                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="204" max="32767" attributes="0"/>
+                  <EmptySpace pref="203" max="32767" attributes="0"/>
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
                   <Component id="BotãoGeral" min="-2" pref="75" max="-2" attributes="0"/>
